--- a/src/pages/lead/lead.html
+++ b/src/pages/lead/lead.html
@@ -1,4 +1,4 @@
-<!-- <ion-header>
+<ion-header>
   <ion-navbar [color]="'head'">
     <ion-buttons left>
       <button ion-button icon-only menuToggle>
@@ -14,7 +14,7 @@
 
 <ion-content padding>
 
-</ion-content> -->
+</ion-content>
 <!-- <ion-header>
   <ion-navbar>
     <ion-title>
@@ -29,7 +29,7 @@
   </ion-navbar>
 </ion-header> -->
 
-<ion-content padding>
+<!-- <ion-content padding>
   <ion-grid>
     <ion-row *ngFor="let order of orders">
       <ion-col>
@@ -48,13 +48,13 @@
   <button ion-button (click)="clearOrders()" color="danger">Cancel</button>
   <ion-fab bottom right>
     <button ion-fab (click)="addrow()">Add</button>
-    <!-- <ion-fab-list side="top">
+    <ion-fab-list side="top">
        <button ion-fab>Product</button>
        <button ion-fab>Note</button>
        <button ion-fab>Copier</button>
      </ion-fab-list>
      <ion-fab-list side="left">
        <button ion-fab>Vimeo</button>
-     </ion-fab-list> -->
+     </ion-fab-list>
   </ion-fab>
-</ion-content>
+</ion-content> -->
