--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,8 +1,8 @@
 <ion-tabs *ngIf="role == '1'" [color]="'tail'">
   <ion-tab [root]="homePage" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="leadPage" tabIcon="book" tabTitle="Lead" [ngStyle]="{'color':'blue'}"></ion-tab>
-  <ion-tab [root]="estimatePage" tabIcon="list-box" tabTitle="Estimate" [ngStyle]="{'color':'blue'}"></ion-tab>
-  <ion-tab [root]="ordersPage" tabIcon="list-box" tabTitle="Orders" [ngStyle]="{'color':'blue'}"></ion-tab>
+  <ion-tab [root]="leadPage" tabIcon="happy" tabTitle="Lead" [ngStyle]="{'color':'blue'}"></ion-tab>
+  <ion-tab [root]="estimatePage" tabIcon="cart" tabTitle="Estimate" [ngStyle]="{'color':'blue'}"></ion-tab>
+  <ion-tab [root]="ordersPage" tabIcon="book" tabTitle="Orders" [ngStyle]="{'color':'blue'}"></ion-tab>
   <!-- <ion-tab [root]="trialBalPage" tabIcon="list-box" tabTitle="Trial Balance" [ngStyle]="{'color':'blue'}"></ion-tab> -->
   <!-- <ion-tab [root]="dayBookPage" tabIcon="book" tabTitle="Day book" [ngStyle]="{'color':'blue'}"></ion-tab> -->
   <!-- <ion-tab [root]="statisticsPage" tabIcon="stats" tabTitle="Statistics" [ngStyle]="{'color':'blue'}"></ion-tab> -->
