--- a/src/pages/orders/navigation-details.html
+++ b/src/pages/orders/navigation-details.html
@@ -13,13 +13,19 @@
 </ion-header>
 
 <ion-content>
-    <ion-card>
+    <ion-card padding>
         <ion-card-header>
             <b>
                 {{ order.customer_NAME}}
             </b>
         </ion-card-header>
-        <ion-item stacked>
+        <h2>Order # {{order.order_GROUP_NO}}</h2>
+        <h3>Site {{order.site_NAME}}</h3>
+        <p>Distance {{displayIndianNumber(order.delivery_DISTANCE)}} Kms</p>
+        <p>Taxable {{order.taxable_STATUS}}</p>
+        <p>Reference 1 {{order.refrerel1_NAME}}</p>
+        <p>Reference 2 {{order.refrerel2_NAME}}</p>
+        <!-- <ion-item stacked>
             <ion-label>Order #</ion-label>
             <ion-label>{{order.order_GROUP_NO }}</ion-label>
         </ion-item>
@@ -29,7 +35,7 @@
         </ion-item>
         <ion-item stacked>
             <ion-label>Distance</ion-label>
-            <ion-label>{{order.delivery_DISTANCE}} Kms</ion-label>
+            <ion-label>{{displayIndianNumber(order.delivery_DISTANCE)}} Kms</ion-label>
         </ion-item>
         <ion-item stacked>
             <ion-label>Taxable</ion-label>
@@ -42,11 +48,14 @@
         <ion-item stacked>
             <ion-label>Reference 2</ion-label>
             <ion-label>{{order.refrerel2_NAME}}</ion-label>
-        </ion-item>
-
+        </ion-item> -->
     </ion-card>
-    <ion-card>
-        <ion-item stacked>
+    <ion-card padding>
+        <h2>Product Group {{order.product_GROUP}}</h2>
+        <h3>Product {{order.product_NAME}}</h3>
+        <p>Cost per Unit {{displayINR(order.product_UNIT_COST)}}</p>
+        <p>Total Units {{displayIndianNumber(order.total_ORDER_UNIT)}}</p>
+        <!-- <ion-item stacked>
             <ion-label>Product Group</ion-label>
             <ion-label>{{order.product_GROUP}}</ion-label>
         </ion-item>
@@ -56,32 +65,45 @@
         </ion-item>
         <ion-item stacked>
             <ion-label>Cost per Unit</ion-label>
-            <ion-label>{{order.product_UNIT_COST}}</ion-label>
+            <ion-label>{{displayINR(order.product_UNIT_COST)}}</ion-label>
         </ion-item>
         <ion-item stacked>
             <ion-label>Total Units</ion-label>
             <ion-label>{{displayIndianNumber(order.total_ORDER_UNIT)}}</ion-label>
-        </ion-item>
+        </ion-item> -->
     </ion-card>
-    <div *ngFor="let item of subOrders">
-        <div *ngIf="item.orderDetails?.length > 0">
-            <ion-card>
-                <ion-card-header>Product Details </ion-card-header>
-                <div *ngFor="let row of item.orderDetails">
-                    <ion-row>
-                        <ion-col col-8>
-                            <ion-item text-wrap>
-                                <ion-label> {{row.name}}</ion-label>
-                            </ion-item>
-                        </ion-col>
-                        <ion-col col-4>
-                            <ion-item>
-                                <ion-label> {{row.quantity}}</ion-label>
-                            </ion-item>
-                        </ion-col>
-                    </ion-row>
-                </div>
-            </ion-card>
+    <div *ngIf="subOrders?.length > 1">
+        <ion-card>
+            <ion-card-header>Order Details</ion-card-header>
+            <ion-list padding *ngFor="let row of subOrders">
+                <h2>Unit(s): {{displayIndianNumber(row.unit_TYPE)}} Load: {{displayIndianNumber(row.unit)}}</h2>
+                <h3>Total Cost: {{displayINR(row.order_TOTAL_COST)}}</h3>
+                <p>Transport: {{displayINR(row.order_TRANSPORT_COST)}}</p>
+                <p>Tax 1: {{displayINR(row.order_TAX1)}} Tax 2: {{displayINR(row.order_TAX2)}}</p>
+            </ion-list>
+        </ion-card>
+    </div>
+    <div *ngIf="subOrders?.length == 1">
+        <div *ngFor="let item of subOrders">
+            <div *ngIf="item.orderDetails?.length > 0">
+                <ion-card>
+                    <ion-card-header>Product Details </ion-card-header>
+                    <div *ngFor="let row of item.orderDetails">
+                        <ion-row>
+                            <ion-col col-8>
+                                <ion-item text-wrap>
+                                    <ion-label> {{row.name}}</ion-label>
+                                </ion-item>
+                            </ion-col>
+                            <ion-col col-4>
+                                <ion-item>
+                                    <ion-label> {{row.quantity}}</ion-label>
+                                </ion-item>
+                            </ion-col>
+                        </ion-row>
+                    </div>
+                </ion-card>
+            </div>
         </div>
     </div>
     <ion-card>
@@ -112,12 +134,12 @@
             <ion-label>{{displayINR(order.total_TRANSPORT_COST)}}</ion-label>
         </ion-item>
     </ion-card>
-
-    <button ion-button block color="secondary" (click)="approveOrder(order.order_GROUP_NO)">
-        Approve
-    </button>
-
-    <button ion-button block color="danger" (click)="rejectOrder(order.order_GROUP_NO)">
-        Reject
-    </button>
+    <div *ngIf="order_type=='estimate'">
+        <button ion-button block color="secondary" (click)="approveOrder(order.order_GROUP_NO)">
+            Approve
+        </button>
+        <button ion-button block color="danger" (click)="rejectOrder(order.order_GROUP_NO)">
+            Reject
+        </button>
+    </div>
 </ion-content>
