--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -12,6 +12,9 @@
   <ion-tab [root]="leadPage" tabIcon="happy" tabTitle="Lead" [ngStyle]="{'color':'blue'}"></ion-tab>
   <ion-tab [root]="estimatePage" tabIcon="cart" tabTitle="Estimate" [ngStyle]="{'color':'blue'}"></ion-tab>
   <ion-tab [root]="ordersPage" tabIcon="book" tabTitle="Orders" [ngStyle]="{'color':'blue'}"></ion-tab>
+  <ion-tab [root]="frontOfficePage" tabIcon="clipboard" tabTitle="Front Office" [ngStyle]="{'color':'blue'}"></ion-tab>
+  <ion-tab [root]="loadingPage" tabIcon="cube" tabTitle="Loading" [ngStyle]="{'color':'blue'}"></ion-tab>
+  <ion-tab [root]="gatePage" tabIcon="person" tabTitle="In-Out Pass" [ngStyle]="{'color':'blue'}"></ion-tab>
   <!-- <ion-tab [root]="trialBalPage" tabIcon="list-box" tabTitle="Trial Balance" [ngStyle]="{'color':'blue'}"></ion-tab> -->
   <!-- <ion-tab [root]="dayBookPage" tabIcon="book" tabTitle="Day book" [ngStyle]="{'color':'blue'}"></ion-tab> -->
   <!-- <ion-tab [root]="statisticsPage" tabIcon="stats" tabTitle="Statistics" [ngStyle]="{'color':'blue'}"></ion-tab> -->
