--- a/src/pages/front-office/front-office.html
+++ b/src/pages/front-office/front-office.html
@@ -5,7 +5,7 @@
         <ion-icon name="menu"></ion-icon>
       </button>
     </ion-buttons>
-    <ion-title center>Orders</ion-title>
+    <ion-title center>Front Office</ion-title>
     <ion-buttons right>
       <img alt="logo" height="40" src="assets/imgs/srk-0.png">
     </ion-buttons>
@@ -13,10 +13,10 @@
   <ion-toolbar no-border-top [color]="isAndroid ? 'royal' : 'masters'">
     <ion-segment [(ngModel)]="category" [color]="'head'">
       <ion-segment-button value="approved-orders">
-        Approved Orders
+        Approved
       </ion-segment-button>
       <ion-segment-button value="in-loading">
-        In Loading
+        Allocated
       </ion-segment-button>
       <ion-segment-button value="loaded">
         Loaded
