--- a/src/pages/loading/loading.html
+++ b/src/pages/loading/loading.html
@@ -13,7 +13,81 @@
 </ion-header>
 
 <ion-content padding>
-  <button ion-button block light (click)="doRadio()">Allocate Vehicle</button>
+  <ion-row>
+    <ion-col col-4>
+      <ion-item>
+        <ion-label>Type</ion-label>
+      </ion-item>
+    </ion-col>
+    <ion-col col-8>
+      <ion-item>
+        <ion-label *ngIf="machineLoading">Machine</ion-label>
+        <ion-label *ngIf="!machineLoading">Manual</ion-label>
+        <ion-toggle (ionChange)="notifyLoadingOption(machineLoading)" [checked]="machineLoading"></ion-toggle>
+      </ion-item>
+    </ion-col>
+  </ion-row>
+  <div padding *ngIf="machineLoading">
+    <button ion-button block light color="one" (click)="doRadioYard()">Select Yard</button>
 
-  <button ion-button block color="danger" (click)="doCheckbox()">Select Employees</button>
+    <button ion-button block color="secondary" (click)="doRadio()">Select Machine</button>
+    <button ion-button block color="secondary" (click)="doCheckbox()">Select Operator</button>
+    <ion-row>
+      <ion-col col-6>
+        <ion-label color="selva">Quanity Loaded</ion-label>
+      </ion-col>
+      <ion-col col-6>
+        <ion-input [(ngModel)]="qtyLoaded" name="qtyLoaded" type="text" class="input" placeholder="Quantity Loaded"></ion-input>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col col-6>
+        <ion-label color="selva">Start Hr Mtr </ion-label>
+      </ion-col>
+      <ion-col col-6>
+        <ion-input [(ngModel)]="startHrMtr" name="startHrMtr" type="text" placeholder="Start Hr Mtr"></ion-input>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col col-6>
+        <ion-label color="selva">End Hr Mtr </ion-label>
+      </ion-col>
+      <ion-col col-6>
+        <ion-input [(ngModel)]="endHrMtr" name="endHrMtr" type="text" placeholder="End Hr Mtr"></ion-input>
+      </ion-col>
+    </ion-row>
+
+  </div>
+  <div padding *ngIf="!machineLoading">
+    <button ion-button block light color="one" (click)="doRadioYard()">Select Yard</button>
+    <button ion-button block color="secondary" (click)="doCheckbox()">Select Employee</button>
+    <ion-row>
+      <ion-col col-6>
+        <ion-label color="selva">Quanity Loaded</ion-label>
+      </ion-col>
+      <ion-col col-6>
+        <ion-input [(ngModel)]="qtyLoaded" name="qtyLoaded" type="text" class="input" placeholder="Quanity Loaded"></ion-input>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col col-6>
+        <ion-label color="selva">No of Persons</ion-label>
+      </ion-col>
+      <ion-col col-6>
+        <ion-input [(ngModel)]="numberOfPersons" name="numberOfPersons" type="text" placeholder="No of Persons"></ion-input>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col col-6>
+        <ion-label color="selva">Time spent</ion-label>
+      </ion-col>
+      <ion-col col-6>
+        <ion-input [(ngModel)]="timeSpent" name="timeSpent" type="text" placeholder="Time Spent"></ion-input>
+      </ion-col>
+    </ion-row>
+  </div>
+  <!-- <button ion-button block light (click)="doRadioYard()">Select Yard</button>
+  <button ion-button block light (click)="doRadio()">Show Radio Alert</button>
+
+  <button ion-button block color="danger" (click)="doCheckbox()">Show Checkbox Alert</button> -->
 </ion-content>
